using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationParameters
{
    public static string chasing = "Chasing";
    public static string walking = "Walking";
    public static string attack = "Attack";
    public static string chasingAnimType = "ChasingType";
    public static string attackingAnimType = "AttackingType";
}
